# 3DCRUST

./: .gitmodules  CMakeLists.txt  README.md
extensions/python_extension/: CMakeLists.txt
extensions/python_extension/bindings/: CDB_Reader_python.cpp
extensions/python_extension/scripts/: VTUwriter_primitive(cdb_to_vtu).py  VTUwriter_trajectory_generator.py  VTUwriter_trajectory_generator_filtered.py
inc/: headers.hpp
main/: 3DCRUST.cpp
paraview/: 3DCRUST_filter_pipeline.py  SL_Preset_01_Hot_Cold.json
src/: CDB_Reader.cpp
